--- a/quemar.html
+++ b/quemar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿¡QUE ACABAS DE HACER!?</title>
-    <link rel="stylesheet" href="styleQ.css">
+    <link rel="stylesheet" href="stylesQuemar.css">
 </head>
 <body>
     <header class="header__inicio">
