--- a/eventodesembarco2a.html
+++ b/eventodesembarco2a.html
@@ -63,7 +63,7 @@
     <section class="acciones">
         <a href="pelea.html" class="acciones__btn acciones__btn--ataque">Continuar el ataque</a>
         <p class="acciones__texto">Qué decides hacer</p>
-        <a href="finalmalo.html" class="acciones__btn acciones__btn--retirada">Retirarse para protegerse</a>
+        <a href="finalmalo1.html" class="acciones__btn acciones__btn--retirada">Retirarse para protegerse</a>
     </section>
 
 </body>
