--- a/ayudarMuro.html
+++ b/ayudarMuro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorpresa</title>
-    <link rel="stylesheet" href="ayudarMuro.css">
+    <link rel="stylesheet" href="stylesayudarMuro.css">
 </head>
 
 <body>
