--- a/recogerejercito.html
+++ b/recogerejercito.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TIENES TU EJÉRCITO</title>
-    <link rel="stylesheet" href="recogerEjercito.css">
+    <link rel="stylesheet" href="stylesrecogerEjercito.css">
 </head>
 
 <body>
