final ayudar muro

--- a/ayudarMuro.html
+++ b/ayudarMuro.html
@@ -26,7 +26,7 @@
         <div class="tarjeta">
             <img src="https://i.blogs.es/a36732/beric/450_1000.jpeg" alt="Rey">
             <h2>Atacar al rey</h2>
-            <a class="btn" href="peleaRey.html">ATACA</a>
+            <a class="btn" href="finalAyuda.html">ATACA</a>
         </div>
     </section>
 </body>
