--- a/capitulo-2a.html
+++ b/capitulo-2a.html
@@ -74,7 +74,7 @@
 
             <div class="acciones__eleccion">¿Qué opción deseas elegir?</div>
 
-            <a href="finalmalo1.html" class="acciones__btn acciones__btn--der">Pedir ayuda a la Casa Frey</a>
+            <a href="bodaRoja.html" class="acciones__btn acciones__btn--der">Pedir ayuda a la Casa Frey</a>
 
         </div>
 
