te encuentras con Jamie

--- a/desembarcoAlternativo.html
+++ b/desembarcoAlternativo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sigue tu camino</title>
+    <title>Desembarco</title>
     <link rel="stylesheet" href="styleFinalmalo1.css" />
 </head>
 
@@ -13,17 +13,17 @@
         <img class="foto"
             src="https://www.aceroymagia.com/Images/articulo/figura-trono-de-hierro-master-craft/01-figura-trono-de-hierro-master-craft.jpg"
             alt="Logo">
-        <h1 class="header__inicio--titulo">HAS PERDIDO</h1>
+        <h1 class="header__inicio--titulo">TE HAS ENCONTRADO CON JAMIE</h1>
     </header>
 
     <main class="caminos">
         <div class="caminos__contenido">
             <img class="caminos__imagen"
-                src="https://hips.hearstapps.com/hmg-prod/images/juego-de-tronos-drogon-jon-nieve-1558344565.jpg?crop=1xw:1xh;center,top&resize=1200:*"
+                src="https://static01.nyt.com/images/2017/08/07/watching/07thrones07/07thrones-slide-7XQ6-videoSixteenByNineJumbo1600.jpg"
                 alt="Mala elección">
-            <p class="titulo__frase">Has escapado de la encerrona y te diriges a Desembarco, pero a mitad de camino tu dragon se cansa y tienes que abandonarlo. Sigue a por el trono.
+            <p class="titulo__frase">Has conseguido llegar a Desembarco pero como no está todavía el Rey aprovechas a atacar, ¡pero está Jamie Lannister guardando el trono! Acaba con él.
             </p>
-            <a href="Caminodesembarc02a.html" class="caminos__boton">Seguir camino</a>
+            <a href="pelea.html" class="caminos__boton">Pelea</a>
         </div>
     </main>
 
