--- a/finalAyuda.html
+++ b/finalAyuda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final Malo</title>
+    <title>Final Ayuda</title>
     <link rel="stylesheet" href="styleFinalmalo1.css" />
 </head>
 
