--- a/cogerDragon.html
+++ b/cogerDragon.html
@@ -13,7 +13,7 @@
         <img class="foto"
             src="https://www.aceroymagia.com/Images/articulo/figura-trono-de-hierro-master-craft/01-figura-trono-de-hierro-master-craft.jpg"
             alt="Logo">
-        <h1 class="header__inicio--titulo">HAS PERDIDO</h1>
+        <h1 class="header__inicio--titulo">HAS COGIDO TU DRAGÓN</h1>
     </header>
 
     <main class="caminos">
