--- a/recogerejercito.html
+++ b/recogerejercito.html
@@ -22,7 +22,7 @@
                 alt="Desembarco">
             <h2>Ir a Desembarco</h2>
             <p>Conquista la ciudad más poderosa de Poniente.</p>
-            <a class="btn" href="desembarco.html">Elegir camino</a>
+            <a class="btn" href="desembarcoAlternativo.html">Elegir camino</a>
         </div>
 
         <div class="tarjeta">
