--- a/ayudarMuro.html
+++ b/ayudarMuro.html
@@ -20,7 +20,7 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeEzDprdzTkI4Mvb7K6uRO-z0Ttz5eZH3_TQ&s"
                 alt="Dragon">
             <h2>Coger tu dragón</h2>
-            <a class="btn" href="desembarco.html">MONTAR DRAGÓN</a>
+            <a class="btn" href="cogerDragon.html">MONTAR DRAGÓN</a>
         </div>
 
         <div class="tarjeta">
