header añadido a otro css

--- a/capitulo-1.html
+++ b/capitulo-1.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMPIEZA EL CAMINO</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleCap1.css">
 </head>
 <body>
     <header class="header__inicio">
-        <img src="https://www.aceroymagia.com/Images/articulo/figura-trono-de-hierro-master-craft/01-figura-trono-de-hierro-master-craft.jpg" alt="Logo">
+        <img class="foto" src="https://www.aceroymagia.com/Images/articulo/figura-trono-de-hierro-master-craft/01-figura-trono-de-hierro-master-craft.jpg" alt="Logo">
         <h1 class="header__inicio--titulo">JUEGO DE TRONOS</h1>
     </header>
     <div class="fondo__cap1">
