--- a/capitulo-2a.html
+++ b/capitulo-2a.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DESEMBARCO</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles2a.css">
 </head>
 
@@ -12,11 +13,11 @@
 
     <div>
 
-        <header class="inicio">
-            <img class="inicio__img"
+        <header class="header__inicio">
+            <img class="foto"
                 src="https://www.aceroymagia.com/Images/articulo/figura-trono-de-hierro-master-craft/01-figura-trono-de-hierro-master-craft.jpg"
                 alt="Logo">
-            <h1 class="inicio__titulo">Bienvenido a Desembarco</h1>
+            <h1 class="header__inicio--titulo">HAS LLEGADO A DESEMBARCO </h1>
         </header>
 
         <div class="cuadro">
