--- a/EmpujarPuerta.html
+++ b/EmpujarPuerta.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empujar la puerta - Nido de Águilas</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleEmpujarPuerta.css">
 </head>
 
