--- a/bodaRoja.html
+++ b/bodaRoja.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Final: Casa Frey</title>
-  <link rel="stylesheet" href="styleBodaroja.css">
+  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleBodaroja.css">
 </head>
 <body>
 
