estilos de pelea unificados

--- a/ataque2.html
+++ b/ataque2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decisión Final del Combate</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styleAtaque2.css">
+    <link rel="stylesheet" href="styleAtaque.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         <div class="combatiente">
             <p class="combatiente__nombre">Jon Nieve</p>
             <div class="combatiente__barra">
-                <div class="combatiente__relleno combatiente__relleno--jon"></div>
+                <div class="combatiente__relleno combatiente__relleno--mitad"></div>
             </div>
             <img class="combatiente__img"
                 src="https://dmn-dallas-news-prod.cdn.arcpublishing.com/resizer/v2/OKR444HRM5F5XOATHCV2CCD5II.jpg?auth=68fbcf05c712fb6314ad9b72ef84a3ac2633dcd1c9dc40ece24955382c9bba2a&quality=80&height=553&width=830&smart=true"
@@ -33,7 +33,7 @@
         <div class="combatiente">
             <p class="combatiente__nombre">Jaime Lannister</p>
             <div class="combatiente__barra">
-                <div class="combatiente__relleno combatiente__relleno--jaime"></div>
+                <div class="combatiente__relleno combatiente__relleno--quarto"></div>
             </div>
             <img class="combatiente__img" src="https://i.redd.it/wg8ktt9bexx21.jpg" alt="Jaime Lannister">
         </div>
