--- a/ataquefinal1.html
+++ b/ataquefinal1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Victoria sobre Jaime</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styleAtaquefinal1.css" />
+    <link rel="stylesheet" href="styleAtaque.css" />
 </head>
 
 <body>
@@ -18,11 +18,11 @@
         <h1 class="header__inicio--titulo">HAS DERROTADO A JAIME LANISTER</h1>
     </header>
 
-    <section class="combate-final">
+    <section class="combate-columnas">
         <div class="combatiente">
             <p class="combatiente__nombre">Jon Nieve</p>
             <div class="combatiente__barra">
-                <div class="combatiente__relleno combatiente__relleno--jon"></div>
+                <div class="combatiente__relleno combatiente__relleno--quarto"></div>
             </div>
             <img class="combatiente__img"
                 src="https://uvn-brightspot.s3.amazonaws.com/assets/vixes/j/jon-snow-batalha-de-winterfell-got-s8-ep3-0419-1400x800.jpg"
@@ -32,7 +32,7 @@
         <div class="combatiente">
             <p class="combatiente__nombre">Jaime Lannister</p>
             <div class="combatiente__barra">
-                <div class="combatiente__relleno combatiente__relleno--jaime"></div>
+                <div class="combatiente__relleno combatiente__relleno--vacio"></div>
             </div>
             <img class="combatiente__img"
                 src="https://img.wattpad.com/a6c5f8ed0047b8da47c3ea97a7fb500962fd91f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f51796d59395164663379343879673d3d2d3437333232363838312e313465366635326133333134623239613235313634373932363630302e676966"
@@ -40,11 +40,11 @@
         </div>
     </section>
 
-    <section class="escena">
-        <p class="escena__texto">
+    <section class="narracion">
+        <p class="narracion__texto">
             Tu espada atraviesa su defensa. Jaime Lannister cae sin fuerzas, su vida se desvanece por completo.
         </p>
-        <p class="escena__destacado">Su barra de vida ha llegado a cero.</p>
+        <p class="narracion__destacado">Su barra de vida ha llegado a cero.</p>
     </section>
 
     <div class="acciones">
