--- a/defender-final2.html
+++ b/defender-final2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styleAtaquefinal1.css" />
+    <link rel="stylesheet" href="styleAtaque.css" />
 </head>
 <body>
     <header class="header__inicio">
@@ -15,11 +15,11 @@
         <h1 class="header__inicio--titulo">HAS SIDO DERROTADO POR JAIME LANISTER</h1>
     </header>
 
-    <section class="combate-final">
+    <section class="combate-columnas">
         <div class="combatiente">
             <p class="combatiente__nombre">Jon Nieve</p>
             <div class="combatiente__barra">
-                <div class="combatiente__relleno combatiente__relleno--jaime"></div>
+                <div class="combatiente__relleno combatiente__relleno--vacio"></div>
             </div>
             <img class="combatiente__img"
                 src="https://i.redd.it/wyo1yg5el79a1.jpg"
@@ -29,7 +29,7 @@
         <div class="combatiente">
             <p class="combatiente__nombre">Jaime Lannister</p>
             <div class="combatiente__barra">
-                <div class="combatiente__relleno combatiente__relleno--jon"></div>
+                <div class="combatiente__relleno combatiente__relleno--quarto"></div>
             </div>
             <img class="combatiente__img"
                 src="https://depor.com/resizer/mBYbmg3I_TS6QdHinRqEl8abCLs=/580x330/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/6M7Q6MDI2NGQHFLQ4YM65A23XQ.jpg"
@@ -37,11 +37,11 @@
         </div>
     </section>
 
-    <section class="escena">
-        <p class="escena__texto">
+    <section class="narracion">
+        <p class="narracion__texto">
             Su espada atraviesa tu defensa. Cae sin fuerzas, tu vida se desvanece por completo.
         </p>
-        <p class="escena__destacado">Tu barra de vida ha llegado a cero. HAS MUERTO</p>
+        <p class="narracion__destacado">Tu barra de vida ha llegado a cero. HAS MUERTO</p>
     </section>
 
     <div class="acciones">
