--- a/pelea.html
+++ b/pelea.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duelo contra Jaime Lannister</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="stylePelea.css">
+    <link rel="stylesheet" href="styleAtaque.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <h1 class="header__inicio--titulo">JUEGO DE TRONOS</h1>
     </header>
 
-    <section class="combate">
+    <section class="combate-columnas">
 
         <div class="combatiente">
             <p class="combatiente__nombre">Tu vida</p>
